# $Id: Makefile.am,v 1.1.1.1 2010/12/17 07:27:40 hccho Exp $

lib_LIBRARIES = libnersuite_common.a

#man_MANS = nersuite.common.1

#EXTRA_DIST = ${man_MANS}

#EXTRA_DIST =

libnersuite_common_a_SOURCES = \
	nersuite_exception.h \
	string_utils.h \
	string_utils.cpp \
	text_loader.h \
	text_loader.cpp \
	option_parser.h \
	ne.h \
	dictionary.h \
	dictionary.cpp \
	tokenizer.h \
	tokenizer.cpp

nersuite_common_CPPFLAGS = @CFLAGS@
INCLUDES = @INCLUDES@

#AM_CFLAGS = @CFLAGS@
#INCLUDES = @INCLUDES@
#AM_LDFLAGS = @LDFLAGS@

