# $Id: Makefile.am,v 1.1.1.1 2010/12/17 07:27:40 hccho Exp $

bin_PROGRAMS = nersuite_tokenizer

#man_MANS = nersuite.tokenizer.1

#EXTRA_DIST = ${man_MANS}

#EXTRA_DIST =

nersuite_tokenizer_SOURCES = \
	run.tokenizer.cpp

nersuite_tokenizer_CPPFLAGS = @CFLAGS@
INCLUDES = @INCLUDES@

#AM_CFLAGS = @CFLAGS@
#INCLUDES = @INCLUDES@
#AM_LDFLAGS = @LDFLAGS@
nersuite_tokenizer_LDADD = ../nersuite_common/libnersuite_common.a


